css/style.css
@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;800&display=swap');

/* regular 400 light 300 */
:root {
  --primary-color: #4163DA;
  --background-color: #ffffff;
  --secondary-color: #5EC5FF;
  --secondary-dark-color: #1f3daa;

}

* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

html {
  scroll-behavior: smooth;
}

body {
  /* change font to required one */
  font-family: 'Poppins', 'Calibri';
  background: var(--background-color);
  color: #000;
}

a {
  text-decoration: none;
}

li {
  list-style-type: none;
}

p {
  font-weight: 300;
  overflow-wrap: break-word;
}

.regular400 {
  font-weight: 400;
}



section {
  padding-block-end: 1rem;
}

/* Start of custom CSS Style */
/* HEADER */

/* Nav Bar */

.gtx-small {
  display: none;
}

@media (max-width: 425px) {
  .gtx-small {
    display: block;
  }

  .gtx-Logo {
    display: none;
  }
}

.custom-nav {
  padding: 1rem 1.75rem;
}

.navbar--link {
  column-gap: 2vmin;
  margin-left: auto;
  margin-right: 0;
  margin-top: 1rem;
}

.nav-item a {
  position: relative;
  text-decoration: none;
  font-size: 26px;
  color: var(--secondary-color);
  font-weight: 700;
  letter-spacing: 1px;
}

.nav-item a:after {
  content: "";
  position: absolute;
  bottom: -3px;
  height: 3px;
  right: 0;
  width: 00%;
  transition: all 500ms ease;
  background-color: var(--secondary-color);
}

.nav-item a:hover:after {
  width: 100%;
  left: 0
}
/* End of Nav Bar */


/* Home Section */
#Showcase {
  /* Idea is to play a video in background
  But there might be issue in smaller devices */
  height: 100vh;
}

#Showcase video {
  position: relative;
  top: 0;
  left: 0;
  height: 100%;
  width: 100%;
  object-fit: cover;
  z-index: -1;
  filter: brightness(0.5);
}

.header-content {
  position: absolute;
  width: 85%;
  margin: auto;
  text-align: center;
  top: 42%;
  left: 50%;
  transform: translate(-50%, -25%);
  color: #fff;
  font-size: 2rem;
}

.gtx-Logo-header {
  margin-block-end: 2rem;
}




/* OUR BRANDS Section */
/* all the classes in order #OurBrands .brand-container-wrapper .brand-container brandlogo-wrapper .ourBrandLogo */
#OurBrands {
  text-align: center;
  padding: 2rem 3rem 8vh;
}

.brand-container {
  position: relative;
  padding: 4vmin 4vmin;
  text-align: center;
}

.brandlogo-wrapper {
  height: 75px;
}

.ourBrandLogo {
  height: inherit;
  max-width: 60vw;
}

/* End of our brand section */

/* Testimonials */
.container-testimonials {
  background-color: var(--secondary-dark-color);
  color: white;
  text-align: center;
  
}

.t-btn {
  justify-content: center;
  width: 3%;
  opacity: 1;
}

/* 

.carousel-item img{
  width:30vw;
  height: 100%;
}

.t-details{
  padding: 1rem 3rem;
} */


.testimonial-text {
  font-size: 3vmin;
  text-align: justify;
}
.t-employee{
  font-size: 1.25rem;
}
.t-img-c {
  height: 450px;
}

.img-testimonials {
  width: 100%;
  height: 100%;
  max-height: 100%;
  object-fit: cover;
}



/* End of Testimonials */

/* Contact US / HQ */

#ContactUs {
  width: 85%;
  margin: auto;
}

.HQ {
  display: grid;
  position: relative;
  grid-template-columns: repeat(auto-fit, minmax(3, 1fr));
  counter-reset: grid-items;
  margin: 1rem 0;
  gap:1em;
}

.map,
.hq1,
.hq2,
.hq3,
.hq4 {
  counter-increment: grid-item;
}


.map {
  grid-column: 3;
  grid-row: 1;
  height: 40vh;
}

.hq-container {
  display: flex;
  flex-direction: column;
}

.hq-container h2{
  font-weight: bold;
}

.hq-container span {
  overflow-wrap: break-word;
}

#map {
  width: 100%;
  height: 100%;

}


/* .HQ{
  display: flex;
  flex-wrap: wrap;
  gap:2rem 1rem;
}

.map{
  order:0;
  flex-grow: 1;
  height: 35vh;
}
#map{
  width: 100%;
  height: 100%;
}
.hq1{
  order:-1;
  width: 60%;
} */

/* End of ContactUS / HQ */

/* Footer */
footer {

  margin-bottom: 5rem;
  background-color: var(--secondary-dark-color);
  padding-block: 2rem;
  padding-inline: 3rem;
  display: flex;
  justify-content: space-between;

}
.footer-icon {
  color: white;
  margin-inline-start: 0.25rem;
}


/* End of footer and hq */

/* Responsive */
@media (min-width: 769px) {
  .hq1 {
    grid-column: 1/3;
    grid-row: 1;
 
  }

  .brand-container p {
    display: none;
    font-size: 1.25rem;
    position: absolute;
    top: 0%;
    margin: 1rem 1rem auto;
    color: #000;
    transition: all .3s;
    font-weight: 500;

  }

  .brand-container:hover .brandlogo-wrapper img {
    filter: grayscale(100%);
    object-fit: fill;
    transform: scale(0.5);

  }

  .brand-container:hover .brand__detail {
    display: block;
  }

}

@media (max-width: 768px) {

  /* .nav-dropdown {
    display: block !important;
  } */

  .nav_title {
    display: none;
  }

  .brand-container p {
    display: none;
  }



  .HQ {
    display: flex;
    flex-wrap: wrap;
    column-gap: 2rem;
    align-items: stretch;
  }

  .map {
    width: 100%;
  }

 

  .hq2,
  .hq3,
  .hq4 {
    flex: 1;
  }

  .hq-container span {
    overflow-wrap: break-word;
  }

}

@media (max-width: 480px) {
  header {
    padding: 1rem;
  }

  footer {
    padding-inline: 0.5rem;
    padding-block: 1.5rem;
    display: grid;
    justify-content: center
  }

  .social-media__list {
    text-align: center;
  }

  

  /* .hq1 {
    margin-inline: 0;
  } */

  .testimonial-text{
    padding-top: 0.5rem;
  }




}

/* End */

